# dying-anima

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SECURITY.md  battle.txt  build.sh  level.txt  player_log.xml  vcpkg.json
assets/: enemies.xml  tooltip.xml
assets/fonts/: font.xml
assets/shaders/: blur.frag.glsl  combine.frag.glsl  combine.vert.glsl  deferred.frag.glsl  fullscreen.frag.glsl  rect.frag.glsl  rect.vert.glsl  separate.frag.glsl  shader.xml  simple.frag.glsl  simple.vert.glsl  text.frag.glsl  text.vert.glsl
assets/textures/: architect.xcf  background.xcf  banner.xcf  box.xcf  building 2.xcf  building.xcf  cathedral_1.xcf  cathedral_background.xcf  cathedral_floor.xcf  caution.xcf  crystal_flower.xcf  dummy.xcf  first_anchor.xcf  floor.xcf  grass.xcf  junk.xcf  lamp 2.xcf  lamp.xcf  lamp_3.xcf  light_sign.xcf  messy_brick.xcf  notexture.xcf  particles.xcf  player (temp).xcf  player.xcf  selected.xcf  sky.xcf  texture.xml  welcome.xcf
docs/: index.html  navbar.css  story.md  style.css
glsl assets/shaders/: deferred.frag.glsl
include/: atlas.h  calculate.h  camera.h  font.h  game.h  input.h  level_editor.h  level_utils.h  light.h  menu.h  object.h  pause.h  pch.h  physics.h  player.h  rect.h  render.h  save_select.h  saves.h  shader.h  sprite.h  state.h  texture.h  transform.h  window.h
include/core/: animation.h  atlas.h  audio.h  camera.h  component.h  font.h  input.h  light.h  log.h  path_resolve.h  physics.h  quad.h  rect.h  render.h  resource_manager.h  scene.h  shader.h  state.h  texture.h  transform.h  window.h
include/editor/: animation.h  onboarding.h  tooltip.h
include/game/: battle.h  character.h  degradation.h  dialogue.h  enemy.h  game.h  intro.h  log.h  pause.h  player.h  progression.h  rpg_tools.h  skill.h  spawn.h
include/menu/: menu_input.h
include/ui/: elements.h
include/util/: calculate.h  colors.h
src/: atlas.cc  calculate.cc  camera.cc  font.cc  game.cc  level_editor.cc  level_utils.cc  main.cc  menu.cc  pause.cc  physics.cc  player.cc  rect.cc  render.cc  save_select.cc  saves.cc  shader.cc  texture.cc  window.cc
src/core/: animation.cc  atlas.cc  audio.cc  camera.cc  component.cc  font.cc  input.cc  log.cc  path_resolve.cc  physics.cc  quad.cc  rect.cc  render.cc  resource_manager.cc  shader.cc  texture.cc  window.cc
src/editor/: animation_editor.cc  onboarding.cc  tooltip.cc
src/game/: battle.cc  character.cc  degradation.cc  dialogue.cc  enemy.cc  game.cc  intro.cc  log.cc  pause.cc  player.cc  rpg_tools.cc
src/menu/: menu_input.cc
src/ui/: button.cc  label.cc  layout.cc
src/util/: calculate.cc  colors.cc
